vpn/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vpn-service
spec:
  selector:
    app: vpn
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vpn-service
spec:
  selector:
    app: vpn
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
    - protocol: UDP
      port: 8080
      targetPort: 8080
